// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GSuitePurchaseCtaFeatures it renders GSuitePurchaseCtaFeatures in a grid 1`] = `
Array [
  <div
    className="gsuite-purchase-cta__add-google-apps-card-features-grid"
  >
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Gmail Logo"
          src="/calypso/images/g-suite/logo_gmail_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Gmail for @testing123.com
        </h5>
        <p>
          Professional ad-free email that works with most email clients.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Drive Logo"
          src="/calypso/images/g-suite/logo_drive_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Keep all your files secure
        </h5>
        <p>
          Get 30GB of storage for all your files synced across devices.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Docs Logo"
          src="/calypso/images/g-suite/logo_docs_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Docs, spreadsheets and forms
        </h5>
        <p>
          Create and edit documents to get your work done faster.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Hangouts Logo"
          src="/calypso/images/g-suite/logo_hangouts_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Connect with your team
        </h5>
        <p>
          Use text chats, voice calls, or video calls, with built in screen sharing
        </p>
      </div>
    </div>
  </div>,
  <div
    className="gsuite-purchase-cta__add-google-apps-card-learn-more"
  >
    <p>
      <strong>
        No setup or software required.
      </strong>
       
      <a
        className="gsuite-purchase-cta__add-google-apps-card-learn-more-link"
        href="https://en.support.wordpress.com/adding-g-suite-to-your-site"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more about integrating G Suite with your site.
      </a>
    </p>
  </div>,
]
`;

exports[`GSuitePurchaseCtaFeatures it renders GSuitePurchaseCtaFeatures in a list 1`] = `
Array [
  <div
    className="gsuite-purchase-cta__add-google-apps-card-features-list"
  >
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Gmail Logo"
          src="/calypso/images/g-suite/logo_gmail_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Gmail for @testing123.com
        </h5>
        <p>
          Professional ad-free email that works with most email clients.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Drive Logo"
          src="/calypso/images/g-suite/logo_drive_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Keep all your files secure
        </h5>
        <p>
          Get 30GB of storage for all your files synced across devices.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Docs Logo"
          src="/calypso/images/g-suite/logo_docs_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Docs, spreadsheets and forms
        </h5>
        <p>
          Create and edit documents to get your work done faster.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Hangouts Logo"
          src="/calypso/images/g-suite/logo_hangouts_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Connect with your team
        </h5>
        <p>
          Use text chats, voice calls, or video calls, with built in screen sharing
        </p>
      </div>
    </div>
  </div>,
  <div
    className="gsuite-purchase-cta__add-google-apps-card-learn-more"
  >
    <p>
      <strong>
        No setup or software required.
      </strong>
       
      <a
        className="gsuite-purchase-cta__add-google-apps-card-learn-more-link"
        href="https://en.support.wordpress.com/adding-g-suite-to-your-site"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more about integrating G Suite with your site.
      </a>
    </p>
  </div>,
]
`;

exports[`GSuitePurchaseCtaFeatures it renders GSuitePurchaseCtaFeatures with basic plan 1`] = `
Array [
  <div
    className="gsuite-purchase-cta__add-google-apps-card-features-grid"
  >
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Gmail Logo"
          src="/calypso/images/g-suite/logo_gmail_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Gmail for @testing123.com
        </h5>
        <p>
          Professional ad-free email that works with most email clients.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Drive Logo"
          src="/calypso/images/g-suite/logo_drive_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Keep all your files secure
        </h5>
        <p>
          Get 30GB of storage for all your files synced across devices.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Docs Logo"
          src="/calypso/images/g-suite/logo_docs_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Docs, spreadsheets and forms
        </h5>
        <p>
          Create and edit documents to get your work done faster.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Hangouts Logo"
          src="/calypso/images/g-suite/logo_hangouts_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Connect with your team
        </h5>
        <p>
          Use text chats, voice calls, or video calls, with built in screen sharing
        </p>
      </div>
    </div>
  </div>,
  <div
    className="gsuite-purchase-cta__add-google-apps-card-learn-more"
  >
    <p>
      <strong>
        No setup or software required.
      </strong>
       
      <a
        className="gsuite-purchase-cta__add-google-apps-card-learn-more-link"
        href="https://en.support.wordpress.com/adding-g-suite-to-your-site"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more about integrating G Suite with your site.
      </a>
    </p>
  </div>,
]
`;

exports[`GSuitePurchaseCtaFeatures it renders GSuitePurchaseCtaFeatures with business plan 1`] = `
Array [
  <div
    className="gsuite-purchase-cta__add-google-apps-card-features-grid"
  >
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Gmail Logo"
          src="/calypso/images/g-suite/logo_gmail_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Gmail for @testing123.com
        </h5>
        <p>
          Professional ad-free email that works with most email clients.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Drive Logo"
          src="/calypso/images/g-suite/logo_drive_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Keep all your files secure
        </h5>
        <p>
          Get 30GB of storage for all your files synced across devices.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Docs Logo"
          src="/calypso/images/g-suite/logo_docs_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Docs, spreadsheets and forms
        </h5>
        <p>
          Create and edit documents to get your work done faster.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-cta__add-google-apps-card-feature"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <img
          alt="Google Hangouts Logo"
          src="/calypso/images/g-suite/logo_hangouts_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-feature-block"
      >
        <h5
          className="gsuite-purchase-cta__add-google-apps-card-feature-header"
        >
          Connect with your team
        </h5>
        <p>
          Use text chats, voice calls, or video calls, with built in screen sharing
        </p>
      </div>
    </div>
  </div>,
  <div
    className="gsuite-purchase-cta__add-google-apps-card-learn-more"
  >
    <p>
      <strong>
        No setup or software required.
      </strong>
       
      <a
        className="gsuite-purchase-cta__add-google-apps-card-learn-more-link"
        href="https://en.support.wordpress.com/adding-g-suite-to-your-site"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more about integrating G Suite with your site.
      </a>
    </p>
  </div>,
]
`;
